prod-croatia-components-main@5916bad7826/n8n/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: n8n
  namespace: n8n
spec:
  host: n8n.apps.prod-nonpci-shared.nrapp.cloud
  to:
    kind: Service
    name: n8n
    weight: 100
  port:
    targetPort: 5678
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
